UPDATES ProjectIssues component; changes priority level display from span to div for better structure, and adjusts CSS to ensure priority indicators are displayed as block elements for improved visibility.

--- a/src/styles/ProjectIssues.module.css
+++ b/src/styles/ProjectIssues.module.css
@@ -55,6 +55,7 @@
 
 
 .criticalPriority {
+  display: block;
     border: 4px solid red;
     color: red;
     border-radius: 10px;
@@ -63,9 +64,11 @@
     font-size:.9rem;
     max-width:fit-content;
     margin: auto;
+  
   }
   
   .highPriority {
+    display: block;
     border: 4px solid  rgb(255, 150, 13);
     color: rgb(255, 150, 13);
     border-radius: 5%;
@@ -78,6 +81,7 @@
   }
   
   .mediumPriority {
+    display: block;
     border: 5px solid  yellow;
     color:rgb(126, 128, 49);
     border-radius: 5%;
@@ -90,6 +94,7 @@
   }
   
   .lowPriority {
+    display: block;
     border: 4px solid rgb(68, 128, 0);
 
     color: rgb(68, 128, 0);
